gitea-namespace-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
