jenkins-namespace-and-pvc copy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
