nexus3-namespace-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus3
