jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - image: jenkins/jenkins
        name: jenkins
        ports:
            - containerPort: 8080
            - containerPort: 50000
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: jenkins-pvc
---
