innotech-srv-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: innotech-mlops-team-alfa-nodeport
spec:
  type: NodePort
  selector:
    app: innotech-mlops-team-alfa
  ports:
    - protocol: TCP
      port: 8080          # Puerto en el que se expone el servicio dentro del cluster
      targetPort: 8080    # Puerto en el que escucha la aplicación en el contenedor
      nodePort: 30001     # Puerto asignado en el nodo (rango permitido: 30000-32767)
