jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: slave
    port: 50000
    protocol: TCP
  selector:
    app: jenkins
  type: ClusterIP
