nexus3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus3-ingress
  namespace: nexus3
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: nexus3.moradores.es
      http:
        paths:
          - path: /.well-known/acme-challenge/
            pathType: Prefix
            backend:
              service:
                name: dummy-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus3
                port:
                  number: 8081
  tls:
    - hosts:
        - nexus3.moradores.es
      secretName: nexus3-tls
